{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 334,
  "lineage": "6296343e-57a6-dd44-8bfc-23f114e4ef89",
  "resources": [
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:internet-gateway/igw-0ce3b9b70f1d0fe09",
            "id": "igw-0ce3b9b70f1d0fe09",
            "owner_id": "763166306791",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-00e2b22def9ed51fb"
          },
          "dependencies": [
            "module.eks_demo.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:route-table/rtb-0b7e9ffc0680f25ba",
            "id": "rtb-0b7e9ffc0680f25ba",
            "owner_id": "763166306791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce3b9b70f1d0fe09",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00e2b22def9ed51fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_demo.aws_internet_gateway.demo",
            "module.eks_demo.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0509dae60b62c667b",
            "route_table_id": "rtb-0b7e9ffc0680f25ba",
            "subnet_id": "subnet-0e7b196a77c473dec"
          },
          "dependencies": [
            "module.eks_demo.aws_internet_gateway.demo",
            "module.eks_demo.aws_route_table.demo",
            "module.eks_demo.aws_subnet.demo",
            "module.eks_demo.aws_vpc.demo",
            "module.eks_demo.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042d7de42c19b7946",
            "route_table_id": "rtb-0b7e9ffc0680f25ba",
            "subnet_id": "subnet-02dbfda8080f22851"
          },
          "dependencies": [
            "module.eks_demo.aws_internet_gateway.demo",
            "module.eks_demo.aws_route_table.demo",
            "module.eks_demo.aws_subnet.demo",
            "module.eks_demo.aws_vpc.demo",
            "module.eks_demo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:security-group/sg-02445b77fd3ff5117",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02445b77fd3ff5117",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "763166306791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2b22def9ed51fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_demo.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "176.105.194.147/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 8080,
            "id": "sgrule-3065720659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02445b77fd3ff5117",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_demo.aws_security_group.demo-cluster",
            "module.eks_demo.aws_vpc.demo",
            "module.eks_demo.data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysql-port",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "176.105.194.147/32"
            ],
            "description": "Allow connection to db",
            "from_port": 3306,
            "id": "sgrule-115538466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02445b77fd3ff5117",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_demo.aws_security_group.demo-cluster",
            "module.eks_demo.aws_vpc.demo",
            "module.eks_demo.data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:subnet/subnet-0e7b196a77c473dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e7b196a77c473dec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763166306791",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-00e2b22def9ed51fb"
          },
          "dependencies": [
            "module.eks_demo.aws_vpc.demo",
            "module.eks_demo.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:subnet/subnet-02dbfda8080f22851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02dbfda8080f22851",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763166306791",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "vpc_id": "vpc-00e2b22def9ed51fb"
          },
          "dependencies": [
            "module.eks_demo.aws_vpc.demo",
            "module.eks_demo.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_demo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "module.eks_demo.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:vpc/vpc-00e2b22def9ed51fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fc8d3494b74658e",
            "default_route_table_id": "rtb-0e3492690b4ebbb2f",
            "default_security_group_id": "sg-0da8ff5570d5e295b",
            "dhcp_options_id": "dopt-bb69ebd1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00e2b22def9ed51fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e3492690b4ebbb2f",
            "owner_id": "763166306791",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks-demo": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.secure_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:security-group/sg-0955c336520f6a686",
            "description": "Web group managed by Terraform",
            "egress": [],
            "id": "sg-0955c336520f6a686",
            "ingress": [],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "763166306791",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-977cfefd"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.secure_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress traffic",
            "from_port": 0,
            "id": "sgrule-1074633487",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0955c336520f6a686",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secure_group.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.secure_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-725696454",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0955c336520f6a686",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secure_group.aws_security_group.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2380600390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0955c336520f6a686",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secure_group.aws_security_group.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2647351923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0955c336520f6a686",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secure_group.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-a348609a",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-66-41-37.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.66.41.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:internet-gateway/igw-058127eb6f5a1c6ed",
            "id": "igw-058127eb6f5a1c6ed",
            "owner_id": "763166306791",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-05ae3b8b4bb8b57f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-a348609a",
            "id": "nat-0d1bfd0c647b2ac60",
            "network_interface_id": "eni-04dd9d835d6618d43",
            "private_ip": "10.0.1.36",
            "public_ip": "3.66.41.37",
            "subnet_id": "subnet-055f84fd5896dcb39"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:route-table/rtb-0c9e2bc6e390e40c0",
            "id": "rtb-0c9e2bc6e390e40c0",
            "owner_id": "763166306791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058127eb6f5a1c6ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "vpc_id": "vpc-05ae3b8b4bb8b57f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:route-table/rtb-0ce4f34b13267e90f",
            "id": "rtb-0ce4f34b13267e90f",
            "owner_id": "763166306791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d1bfd0c647b2ac60",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-demo"
            },
            "vpc_id": "vpc-05ae3b8b4bb8b57f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6e8504abffc9f9e",
            "route_table_id": "rtb-0ce4f34b13267e90f",
            "subnet_id": "subnet-0d7640fb57112a3c3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.route_private",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ec6883b300d3537",
            "route_table_id": "rtb-0c9e2bc6e390e40c0",
            "subnet_id": "subnet-055f84fd5896dcb39"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.route-public",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:subnet/subnet-0d7640fb57112a3c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d7640fb57112a3c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "763166306791",
            "tags": {
              "Name": "Private subnet"
            },
            "tags_all": {
              "Name": "Private subnet"
            },
            "vpc_id": "vpc-05ae3b8b4bb8b57f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:subnet/subnet-055f84fd5896dcb39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-055f84fd5896dcb39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "763166306791",
            "tags": {
              "Name": "Public subnet"
            },
            "tags_all": {
              "Name": "Public subnet"
            },
            "vpc_id": "vpc-05ae3b8b4bb8b57f1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:763166306791:vpc/vpc-05ae3b8b4bb8b57f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a58246981cde4f1d",
            "default_route_table_id": "rtb-0fcff7f39eb6e95f3",
            "default_security_group_id": "sg-0982b371835275b9c",
            "dhcp_options_id": "dopt-bb69ebd1",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ae3b8b4bb8b57f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fcff7f39eb6e95f3",
            "owner_id": "763166306791",
            "tags": {
              "Name": "Vpc-custom-demo"
            },
            "tags_all": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}